kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exerciselog-api-deployment
  labels:
    app: exerciselog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exerciselog-api
  template:
    metadata:
      labels:
        app: exerciselog-api
    spec:
      containers:
      - name: exerciselog-api
        image: ghcr.io/pettermk/exerciselog-api:main
        ports:
        - containerPort: 5073
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exerciselog-api-service
spec:
  selector:
    app: exerciselog-api
  ports:
    - port: 5073
      targetPort: 5073
      protocol: TCP
      name: http
  type: ClusterIP
