kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exerciselog-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - exerciselog-api.kvalvaag-tech.com
    secretName: exerciselog-api-tls
  rules:
    - host: exerciselog-api.kvalvaag-tech.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: exerciselog-api-service
              port:
                number: 80
